--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </h2>
                         <p>Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1"><img src="./images/slider/bike1.png" class="w-[400px]" /></div>
                 </div>
@@ -99,7 +99,7 @@
                         </h2>
                         <p>Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1"><img src="./images/slider/bike2.png" class="w-[400px]" /></div>
                 </div>
@@ -117,7 +117,7 @@
                         </h2>
                         <p>Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1"><img src="./images/slider/bike3.png" class="w-[400px]" /></div>
                 </div>
@@ -135,7 +135,7 @@
                         </h2>
                         <p>Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1"><img src="./images/slider/bike4.png" class="w-[400px]" /></div>
                 </div>
@@ -159,36 +159,110 @@
                     <div class="card bg-base-100 shadow-xl">
                         <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
                         <div class="card-body">
-                          <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-                          <div class="card-actions">
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
-                          </div>
+                            <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
+                                sed id nisi lectus at.</p>
+                            <div class="card-actions">
+                                <button class="btn bg-bike-primary text-white">Purchase</button>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                     <!-- secound card  -->
                     <div class="card bg-base-100 shadow-xl">
                         <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
                         <div class="card-body">
-                          <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-                          <div class="card-actions">
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
-                          </div>
+                            <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
+                                sed id nisi lectus at.</p>
+                            <div class="card-actions">
+                                <button class="btn bg-bike-primary text-white">Purchase</button>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                     <!-- third card  -->
                     <div class="card bg-base-100 shadow-xl">
                         <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
                         <div class="card-body">
-                          <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-                          <div class="card-actions">
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
-                          </div>
+                            <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
+                                sed id nisi lectus at.</p>
+                            <div class="card-actions">
+                                <button class="btn bg-bike-primary text-white">Purchase</button>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                 </div>
+            </section>
+        </section>
+        <section>
+            <section class="my-24">
+                <h3 class="text-5xl mb-12 font-semibold text-center">Happy <span class="text-bike-primary">Clients
+                        says</span> </h3>
+                    <div class="grid gap-11 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                        <!-- frist review -->
+                        <div class="card card-compact bg-base-100 p-9 border border-gray-400">
+                            <figure><img class="w-36" src="./images/others/user-1.png" alt="Shoes" /></figure>
+                            <div class="card-body">
+                                <p>Slate helps you see how
+                                    many more days you need
+                                    to work to reach your financial
+                                    goal for the month and year.</p>
+                                    <div class="rating justify-center">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"checked/>
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                      </div>
+                                <div class=" text-center space-y-4 mt-4">
+                                    <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                                    <p>Banker</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- second review -->
+                        <div class="card card-compact bg-base-100 p-9 border border-gray-400">
+                            <figure><img class="w-36" src="./images/others/user-2.png" alt="Shoes" /></figure>
+                            <div class="card-body">
+                                <p>Slate helps you see how
+                                    many more days you need
+                                    to work to reach your financial
+                                    goal for the month and year.</p>
+                                    <div class="rating justify-center">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"checked/>
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                      </div>
+                                <div class=" text-center space-y-4 mt-4">
+                                    <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                                    <p>Banker</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- three review -->
+                        <div class="card card-compact bg-base-100 p-9 border border-gray-400">
+                            <figure><img class="w-36" src="./images/others/user-3.png" alt="Shoes" /></figure>
+                            <div class="card-body">
+                                <p>Slate helps you see how
+                                    many more days you need
+                                    to work to reach your financial
+                                    goal for the month and year.</p>
+                                    <div class="rating justify-center">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"checked/>
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                      </div>
+                                <div class=" text-center space-y-4 mt-4">
+                                    <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                                    <p>Banker</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </section>
         </section>
 
