added features section

--- a/index.html
+++ b/index.html
@@ -147,8 +147,19 @@
         </div>
     </header>
     <main class="md:container md:mx-auto">
-        <section>
+        <section class="my-24">
             <!-- features bike  -->
+            <div class="">
+                <div>
+                    <h3 class="text-5xl font-semibold text-center">Fetured Bikes In This Year</h3>
+                    <h6 class="texl-xl text-center mb-12 text-bike-primary">Best bike collection</h6>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                    <img src="./images/others/feature-bike.png" alt="">
+                    <img src="./images/others/feature-bike.png" alt="">
+                    <img src="./images/others/feature-bike.png" alt="">
+                </div>
+            </div>
         </section>
         <section>
             <!-- latest bike  -->
@@ -268,7 +279,7 @@
         <section>
             <h3 class="text-5xl mb-12 font-semibold text-center">Frequently Asked <span
                     class="text-bike-primary">Questions</span> </h3>
-            <div class="hero ">
+            <div class="hero">
                 <div class="hero-content flex-col lg:gap-24 lg:flex-row">
                     <img src="./images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
                     <div>
